Bug 1211411 - Limit the number of thread hang stats reported to Telemetry. r=vladan